playbook post build change 1

--- a/iTrust/postcommit_jenkinsbuild.yml
+++ b/iTrust/postcommit_jenkinsbuild.yml
@@ -1,8 +1,9 @@
 - hosts: localhost
+  become: yes
   tasks: 
 
   - name: password
-    shell: cat /var/lib/jenkins/initialAdminPassword
+    shell: cat /var/lib/jenkins/secrets/initialAdminPassword
     register: password
 
   - name: Get Jenkins crumb
